feat: add endpoint for getting all users
