# server/docs/openapi.yaml
@@ -296,8 +296,57 @@ paths:
                 properties:
                   message:
                     type: string
-                    description: "nvalid refresh token or user not found."
+                    description: "Invalid refresh token or user not found."
         '500':
+          $ref: "#/components/responses/500UnexpectedError"
+
+  /api/users:
+    get:
+      summary: Retrieve a list of users
+      description: >
+        This endpoint retrieves a list of users and their public information (`username`, `first name`, `last name`, `avatar`).
+      tags:
+        - Users
+      security:
+        - bearerAuth: [ ]
+      responses:
+        200:
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    username:
+                      type: string
+                      example: "john_doe"
+                      description: "The username of the user."
+                    firstName:
+                      type: string
+                      example: "John"
+                      description: "The first name of the user."
+                    lastName:
+                      type: string
+                      example: "Doe"
+                      description: "The last name of the user."
+                    avatar:
+                      type: string
+                      format: url
+                      example: "http://example.com/avatar.jpg"
+                      description: "The URL of the user's avatar."
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Unauthorized"
+        500:
           $ref: "#/components/responses/500UnexpectedError"
 
   /api/users/current:
